--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/rboard321/fitnesstrackr/issues"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
